--- a/deneme123/appsettings.json
+++ b/deneme123/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;port=3306;database=deneme123;user=root;password=1234;"
+    "DefaultConnection": "server=localhost;port=3306;database=deneme123;user=root;password=1234;"
+  },
+  "Jwt": {
+    "Key": "BuAnahtarEnAz32KarakterUzunlugundaOlmali!",
+    "Issuer": "bburakuzun",
+    "Audience": "bburakuzun",
+    "ExpiresInMinutes": 60
   }
 }
